Use removeLast in TestFoundationPile helper